# pysetting

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Pipfile  README.md  analyzing.code-workspace  configuration.code-workspace  pysetting.code-workspace  setup.cfg  setup.py  workspace.code-workspace
.github/workflows/: pre_release.yml  release.yml
analyzing_fenix_library_rebornos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
documentation/: regenerate_documentation.sh
documentation/source/: api_documentation.rst  conf.py  contributing.rst  index.rst  installation.rst  prerequisites.rst
fenix-library/analyzing/: analyzing.py
fenix_library/analyzing/: __init__.py  analyzing.py
fenix_library_analyzing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
packaging/: build_package.sh  build_python_package.sh  install_package.sh  setup.sh
packaging/arch/: build_package.sh  build_python_package.sh  install_package.sh  setup.sh
packaging/arch/python-pysetting-git/: PKGBUILD
packaging/archlinux/: PKGBUILD  python-fenix_library-configuration-0.0.3-1-any.pkg.tar  python-fenix_library-configuration-0.0.3-1-any.pkg.tar.zst  python-fenix_library-configuration-0.0.3-1-any.pkg.tar.zst.sig  python-fenix_library-configuration-0.0.5-1-any.pkg.tar.zst  python-fenix_library-configuration-git-0.0.3-1-any.pkg.tar
packaging/debian/: build_package.sh
packaging/python-pysetting/: PKGBUILD
packaging/python-pysetting-git/: PKGBUILD
packaging/python-pysetting-local/: PKGBUILD
scripts/: build-python.sh  clean_build-python.sh  rebuild-archlinux.sh  regenerate_pipenv.sh  test.sh
(+48 files in other folders)
