[metadata]
name = analyzing-fenix-library-rebornos
version = 0.0.1
author = Shivanand Pattanshetti
author_email = shivanand.pattanshetti@gmail.com
description = The analysis library for the Fenix Installer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/rebornos-team/fenix/fenix-libraries/fenix-library-analyzing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
[options]
packages = find:
python_requires = >=3.6
install_requires = [
    'psutil',
    'fenix-library.running',
    'fenix-library.configuration',
]